# QNes

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  TODO
src/: CMakeLists.txt  cpu_isa.cpp  cpu_isa.hpp  qnes_bits.hpp  qnes_bus.cpp  qnes_bus.hpp  qnes_c.hpp  qnes_cpu.cpp  qnes_cpu.hpp  qnes_emu.cpp  qnes_emu.hpp  qnes_framebuffer.hpp  qnes_main.cpp  qnes_memory.hpp  qnes_ppu.cpp  qnes_ppu.hpp
test/: CMakeLists.txt  qnes_test.cpp
test/cpu_tests/: isa_absolute.cpp  isa_absolute_indexed.cpp  isa_immediate.cpp  isa_implied.cpp  isa_indirect.cpp  isa_indirect_indexed.cpp  isa_register_transfer.cpp  isa_relative.cpp  isa_stack.cpp  isa_zeropage.cpp  isa_zeropage_indexed.cpp  reset.cpp  stack.cpp
test/nes_main/: nes_memory_mirroring.cpp  nes_ppu_register_mirroring.cpp  nes_ppu_registers.cpp
test/test_roms/: cpu_functional_test.cpp
